Added "buttons-container", two buttons and css rules to center everything

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id='buttons-container'>
+        <button>Reset grid</button>
+        <button>Change density</button>
+    </div>
     <div id="grid-container"></div>
 </body>
 </html>
