Adapted "script.js" to make buttons work

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div id='buttons-container'>
-        <button>Reset grid</button>
-        <button>Change density</button>
+        <button id="reset-button">Reset grid</button>
+        <button id="change-density-button">Change density</button>
     </div>
     <div id="grid-container"></div>
 </body>
